[tool.poetry]
name = "graph-code-rag"
version = "0.0.1"
description = "Codebase RAG Chat Application"
authors = ["Shyam Sreenivasan <shyam.vegeta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
